--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Thunder Official</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
+</head>
+<body>
+    <div id="nav">
+        <img src="logo.png" alt="">
+        <div id="center-nav">
+            <a href="#">HOME</a>
+            <a href="#">PROJECT</a>
+            <a href="#">ABOUT</a>
+            <a href="#">CONTACT</a>
+        </div>
+        <button>PLAYGROUND</button>
+    </div>
+    <div id="main">
+        <div id="page">
+            <h1>Welcome To Our
+                <br>
+                 Website
+            </h1>
+            <h4>We create a technical solutions to
+                <br>
+                solve the real life problems across the globe.
+            </h4>
+        </div>
+    </div>
+</body>
+</html>
