--- a/index.html
+++ b/index.html
@@ -5,20 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thunder Official</title>
+    <title>Thunder</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
 </head>
 <body>
     <div id="nav">
-        <img src="logo.png" alt="">
         <div id="center-nav">
-            <a href="#">HOME</a>
-            <a href="#">PROJECT</a>
-            <a href="#">ABOUT</a>
-            <a href="#">CONTACT</a>
+            <a href="#">Home</a>
+            <a href="#">Store</a>
+            <a href="#">Apps</a>
+            <a href="#">Contact</a>
         </div>
-        <button>PLAYGROUND</button>
     </div>
     <div id="main">
         <div id="page">
