--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="welcome-text">Welcome to the System!</h1>
+        <h1 class="welcome-text">Welcome To Our Website!</h1>
     </div>
 </body>
 </html>
