--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="bgAnimation" id="bgAnimation">
+        <div class="backgroundAmim">
+            
+        </div>
+    </div>
     <div class="container">
         <h1 class="welcome-text">Welcome To Our Website!</h1>
     </div>
+    <script src="./script.js"></script>
 </body>
 </html>
