--- a/index.html
+++ b/index.html
@@ -7,14 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <a href="" class="logo">Thunder</a>
+        <nav>
+            <a href="" class="active">Home</a>
+            <a href="">Store</a>
+            <a href="">App</a>
+            <a href="">Contact</a>
+        </nav>
+    </header>
     <div class="bgAnimation" id="bgAnimation">
         <div class="backgroundAmim">
             
         </div>
     </div>
     <div class="container">
-        <h1 class="welcome-text">Welcome To Our Website!</h1>
+        <h1 class="welcome-text">Thunder: Where Innovation Meets Possibility</h1>
+        <h3 class="sub">Crafting next-gen technology to empower your world.</h3>
     </div>
+    
     <script src="./script.js"></script>
 </body>
 </html>
